# project-chimera

./: .coderabbit.yaml  AGENT.md  Dockerfile  Makefile  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: agent.mdc
.github/: copilot-instructions.md
.github/workflows/: main.yml
research/: architecture_strategy.md  tooling_strategy.md
skills/skill_fetch_trends/: README.md
skills/skill_generate_caption/: README.md
skills/skill_publish_video/: README.md
specs/: _meta.md  functional.md  openclaw_integration.md  technical.md
tests/: test_placeholder.py  test_skills_interface.py  test_trend_fetcher.py
