[project]
name = "project-chimera"
version = "0.1.0"
description = "Autonomous Influencer Network – Spec-Driven Architecture"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[build-system]
requires = ["poetry-core>=2.3.0"]
build-backend = "poetry.core.masonry.api"
